# MinimalUnity3dCppPlugin

./: Readme.md
CppPlugin/: CMakeLists.txt  Plugin.cpp
Unity/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
Unity/Assets/: Main.cs  PluginTest.unity
Unity/Assets/Plugins/: CppPlugin.bundle
Unity/ProjectSettings/: ProjectSettings.asset
